Test title change for cloud build

--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
 	  display: block;
       }
     </style>
-    <title>00ze</title>
+    <title>00ze - Tastes Good!</title>
   </head>
   <body>
     <img src="/images/00ze.gif"/>
